# memeserver

./: Cargo.toml  package-lock.json  package.json  tailwind.config.js
src/: main.rs  tailwind.css
