[package]
name = "memesever"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.6.19", features=["macros", "multipart"]}
html-to-string-macro = "0.2.5"
uuid = {version="1.4.1", features=["v4"]}
sqlx = { version="0.7.1", features=["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = {version="1.29.1", features=["rt-multi-thread", "macros"]}
bytesize = "1.2.0"
tower-http = {version = "0.4.3", features = ["fs" ,"trace"] }
